<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/admin_background"
    tools:context=".ThirdFragmentAdmin">

    <Button
        android:id="@+id/edit_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/admin_button_color"
        android:text="@string/cancel"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/edit_course_button"
        app:layout_constraintHorizontal_bias="0.082"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editprereq"
        app:layout_constraintVertical_bias="0.787" />

    <TextView
        android:id="@+id/editing_course"
        android:layout_width="255dp"
        android:layout_height="39dp"
        android:layout_marginTop="40dp"
        android:text="@string/edit_course"
        android:textAlignment="center"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/editfall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fall"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.123"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.395" />

    <CheckBox
        android:id="@+id/editwinter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/winter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.13"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editfall"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/offeringSessions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/offering_sessions"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editfall"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.148"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.995" />

    <CheckBox
        android:id="@+id/editsummer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/summer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.134"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editwinter"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/edit_course_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/admin_button_color"
        android:text="@string/edit_button"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.801"
        app:layout_constraintStart_toEndOf="@+id/edit_back"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.954" />

    <EditText
        android:id="@+id/editprereq"
        android:layout_width="172dp"
        android:layout_height="41dp"
        android:ems="10"
        android:hint="@string/prereqHint"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.217"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editsummer"
        app:layout_constraintVertical_bias="0.297" />

    <Button
        android:id="@+id/editadd_prereq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="64dp"
        android:backgroundTint="@color/admin_button_color"
        android:text="Add"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/edit_course_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/editprereq"
        app:layout_constraintTop_toBottomOf="@+id/editsummer"
        app:layout_constraintVertical_bias="0.227" />

    <TextView
        android:id="@+id/prereq_header"
        android:layout_width="114dp"
        android:layout_height="21dp"
        android:text="@string/prereq"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/course_prereqs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.705"
        app:layout_constraintStart_toEndOf="@+id/offeringSessions"
        app:layout_constraintTop_toBottomOf="@+id/editcoursecode"
        app:layout_constraintVertical_bias="0.933" />

    <EditText
        android:id="@+id/editcourseName"
        android:layout_width="165dp"
        android:layout_height="43dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/course_name"
        android:inputType="textEmailAddress"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editing_course" />

    <ScrollView
        android:id="@+id/course_prereqs"
        android:layout_width="177dp"
        android:layout_height="156dp"
        android:isScrollContainer="false"
        app:layout_constraintBottom_toTopOf="@+id/editadd_prereq"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.957"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.803">

        <TableLayout
            android:id="@id/add_table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

    <EditText
        android:id="@+id/editcoursecode"
        android:layout_width="165dp"
        android:layout_height="50dp"
        android:layout_marginBottom="28dp"
        android:ems="10"
        android:hint="@string/course_code"
        android:inputType="textEmailAddress"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/offeringSessions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editcourseName" />

</androidx.constraintlayout.widget.ConstraintLayout>