<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph2"
    app:startDestination="@id/FirstFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="com.example.coursemanager.FirstFragmentAdmin"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_first_admin">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/SecondFragment" />
        <action
            android:id="@+id/action_FirstFragment_to_thirdFragmentAdmin"
            app:destination="@id/thirdFragmentAdmin" />
        <action
            android:id="@+id/action_FirstFragment_self2"
            app:destination="@id/FirstFragment" />
    </fragment>
    <fragment
        android:id="@+id/SecondFragment"
        android:name="com.example.coursemanager.SecondFragmentAdmin"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_second_admin">

        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>
    <fragment
        android:id="@+id/thirdFragmentAdmin"
        android:name="com.example.coursemanager.ThirdFragmentAdmin"
        android:label="@string/third_fragment_label"
        tools:layout="@layout/fragment_third_admin" >
        <action
            android:id="@+id/action_thirdFragmentAdmin_to_FirstFragment"
            app:destination="@id/FirstFragment" />
        <action
            android:id="@+id/action_thirdFragmentAdmin_self"
            app:destination="@id/thirdFragmentAdmin" />
    </fragment>
</navigation>